--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
     <title>Aica's Personal Website</title>
   </head>
   <!-- charcoal grey: #232023 -->
