Fixed bugs and display spacing for page header

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <title>Aica's Personal Website</title>
   </head>
@@ -9,19 +10,19 @@
   <body style="background-color:#222222">
     <div class=header>
       <div class=page-link>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/home_icon.svg" width="30" height="30" alt="home_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/home_icon.svg" width="25" height="25" alt="home_icon"></img>
         <a href="https://aica7.github.io/index.html">/home/</a>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/home_icon.svg" width="30" height="30" alt="home_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/home_icon.svg" width="25" height="25" alt="home_icon"></img>
       </div>
       <div class=page-link>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/info_icon.svg" width="30" height="30" alt="info_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/info_icon.svg" width="25" height="25" alt="info_icon"></img>
         <a href="https://aica7.github.io/about.html">/about/</a>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/info_icon.svg" width="30" height="30" alt="info_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/info_icon.svg" width="25" height="25" alt="info_icon"></img>
       </div>
       <div class=page-link>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/rss_icon.svg" width="30" height="30" alt="rss_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/rss_icon.svg" width="25" height="25" alt="rss_icon"></img>
         <a href="https://aica7.github.io/rss.html">/rss/</a>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/rss_icon.svg" width="30" height="30" alt="rss_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/rss_icon.svg" width="25" height="25" alt="rss_icon"></img>
       </div>
     </div>
   </body>
