--- a/index.html
+++ b/index.html
@@ -8,21 +8,35 @@
   </head>
   <!-- charcoal grey: #232023 -->
   <body style="background-color:#222222">
+    <!-- header will contain all of the links to different areas of the page -->
     <div class=header>
       <div class=page-link>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/home_icon.svg" width="25" height="25" alt="home_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/icons/home_icon.svg" width="25" height="25" alt="home_icon"></img>
         <a href="https://aica7.github.io/index.html">/home/</a>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/home_icon.svg" width="25" height="25" alt="home_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/icons/home_icon.svg" width="25" height="25" alt="home_icon"></img>
       </div>
       <div class=page-link>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/info_icon.svg" width="25" height="25" alt="info_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/icons/info_icon.svg" width="25" height="25" alt="info_icon"></img>
         <a href="https://aica7.github.io/about.html">/about/</a>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/info_icon.svg" width="25" height="25" alt="info_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/icons/info_icon.svg" width="25" height="25" alt="info_icon"></img>
       </div>
       <div class=page-link>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/rss_icon.svg" width="25" height="25" alt="rss_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/icons/rss_icon.svg" width="25" height="25" alt="rss_icon"></img>
         <a href="https://aica7.github.io/rss.html">/rss/</a>
-        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/rss_icon.svg" width="25" height="25" alt="rss_icon"></img>
+        <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/icons/rss_icon.svg" width="25" height="25" alt="rss_icon"></img>
+      </div>
+    </div>
+    <!-- Define our first top left panel containing information about the user and more -->
+    <br>
+    <div class=panel>
+      <!-- Arbritrary container defining properties for the top panel -->
+      <div id=top-info-container>
+        <div id=profile-picture-section>
+          <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/imgs/snow_raven.jpg">
+        </div>
+        <div id=top-info-section>
+          <p>Aidan Catchpool</p>
+        </div>
       </div>
     </div>
   </body>
