--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
           <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/imgs/snow_raven.jpg">
         </div>
         <div id=top-info-section>
-          <p>Aidan Catchpool</p>
+          <h1>Aidan Catchpool</h1>
+          <!-- Override default gap, padding and line height properties for tag below name -->
+          <div class=tag style="column-gap:35px;margin-top:-6px;padding-left:5px;">
+            <p style="border-color:#bf8bff;background-color:#bf8bff;">aica</p>
+            <p style="border-color:#a22adf;background-color:#a22adf;">he/him</p>
+          </div>
+          <div class=tag style="margin-top:-12px;">
+            <p style="border-width:2px;font-size:14px;border-color:#636363;background-color:#282828;">programming • electronics • student</p>
+          </div>
         </div>
       </div>
     </div>
