--- a/index.html
+++ b/index.html
@@ -28,24 +28,30 @@
     </div>
     <!-- Define our first top left panel containing information about the user and more -->
     <br>
-    <div class=panel>
-      <!-- Arbritrary container defining properties for the top panel -->
-      <div id=top-info-container>
-        <div id=profile-picture-section>
-          <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/imgs/snow_raven.jpg">
-        </div>
-        <div id=top-info-section>
-          <h1>Aidan Catchpool</h1>
-          <!-- Override default gap, padding and line height properties for tag below name -->
-          <div class=tag style="column-gap:35px;margin-top:-6px;padding-left:5px;">
-            <p style="border-color:#bf8bff;background-color:#bf8bff;">aica</p>
-            <p style="border-color:#a22adf;background-color:#a22adf;">he/him</p>
+    <div class=panel-container>
+      <div class=panel style="grid-area:tlpanel;">
+        <!-- Arbritrary container defining properties for the top panel -->
+        <div id=top-info-container>
+          <div id=profile-picture-section>
+            <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/imgs/snow_raven.jpg">
           </div>
-          <div class=tag style="margin-top:-12px;">
-            <p style="border-width:2px;font-size:14px;border-color:#636363;background-color:#282828;">programming • electronics • student</p>
+          <div id=top-info-section>
+            <h1>Aidan Catchpool</h1>
+            <!-- Override default gap, padding and line height properties for tag below name -->
+            <div class=tag style="column-gap:35px;margin-top:-6px;padding-left:5px;">
+              <p style="border-color:#bf8bff;background-color:#bf8bff;">aica</p>
+              <p style="border-color:#a22adf;background-color:#a22adf;">he/him</p>
+            </div>
+            <div class=tag style="margin-top:-12px;">
+              <p style="border-width:2px;font-size:14px;border-color:#636363;background-color:#282828;">programming • electronics • student</p>
+            </div>
           </div>
         </div>
       </div>
+      <div class=panel style="grid-area:midpanel;width:755px;"></div>
+      <div class=panel style="grid-area:trpanel;"></div>
+      <div class=panel style="grid-area:blpanel;"></div>
+      <div class=panel style="grid-area:brpanel;"></div>
     </div>
   </body>
 </html>
