--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-      <div class=panel style="grid-area:midpanel;width:755px;"></div>
+      <div class=panel style="grid-area:midpanel;"></div>
       <div class=panel style="grid-area:trpanel;"></div>
       <div class=panel style="grid-area:blpanel;"></div>
       <div class=panel style="grid-area:brpanel;"></div>
