Fixed bug regarding the sizing and placements of different panels

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <!-- charcoal grey: #232023 -->
   <body style="background-color:#222222">
-    <!-- header will contain a nav with all of the links to different areas of the page -->
+    <!-- header will contain a nav with all the links to different areas of the page -->
     <header>
       <nav>
         <span class=page-link>
@@ -32,7 +32,7 @@
     <br>
     <main>
       <div class=panel-container>
-        <div class=panel style="grid-area:tlpanel;">
+        <div class=panel style="grid-area:tlpanel;justify-self:start;">
           <!-- Arbritrary container defining properties for the top panel -->
           <div id=top-info-container>
             <div id=profile-picture-section>
@@ -51,10 +51,10 @@
             </div>
           </div>
         </div>
-        <div class=panel style="grid-area:midpanel;"></div>
-        <div class=panel style="grid-area:trpanel;"></div>
-        <div class=panel style="grid-area:blpanel;"></div>
-        <div class=panel style="grid-area:brpanel;"></div>
+        <div class=panel style="grid-area:midpanel;justify-self:center;width:750px;%;"></div>
+        <div class=panel style="grid-area:trpanel;justify-self:end;"></div>
+        <div class=panel style="grid-area:blpanel;justify-self:start;"></div>
+        <div class=panel style="grid-area:brpanel;justify-self:end;"></div>
       </div>
     </main>
     <footer>
