Evening commit - Added in side profile section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
               </p>
             </div>
           </section>
+          <section id=side-info-section>
+            <div>
+              <img id="terminal-icon" src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/icons/terminal_icon.svg" width="42" height="42" alt="terminal_icon"></img>
+              <p id="terminal-prompt">
+                aica@macOS:~$
+              </p>
+            </div>
+            <div>
+              <div id="vline"></div>
+              <div class=quote style="left:25px;bottom:25px;">
+                <p>
+                How many software engineers<br>
+                does it take to fix a lightbulb?<br>
+                <br>
+                None its a hardware problem lol
+                </p>
+              </div>
+            </div>
+          </section>
         </div>
       </div>
     </main>
