--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
               </div>
             </div>
           </section>
+          <section id=contact-section>
+            <div class=contact-link>
+              <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/icons/github_icon.svg" width="40" height="40" alt="github_icon"></img>
+              <a href="https://github.com/aica7">
+                GitHub
+              </a>
+            </div>  
+            <div class=contact-link style="gap:6px;">
+              <img src="https://raw.githubusercontent.com/aica7/aica7.github.io/main/assets/icons/email_icon.svg" width="50" height="50" alt="email_icon"></img>
+              <p>
+                Contact Me
+              </p>
+            </div>
+          </section>
         </div>
       </div>
     </main>
