Fixed bugs regarding SVG structure and clock hands drawing

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <script type="text/javascript" src="js/clock.js"></script>
     <title>Aica's Personal Website</title>
+    <link rel="stylesheet" href="css/main.css">
+    <!-- jQuery CDN import -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"></script>
   </head>
   <!-- charcoal grey: #232023 -->
   <body>
@@ -114,5 +118,6 @@
     </main>
     <footer>
     </footer>
+    <script type="text/javascript" src="js/clock.js"></script>
   </body>
 </html>
