--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+r!DOCTYPE HTML>
 <html>
   <head>
     <meta charset="utf-8">
@@ -104,12 +104,12 @@
                 stroke="black" stroke-width="2" fill-opacity=0></circle>
               </svg>
             </div>
-            <div style="display:flex;padding-left:55px;gap:60px;">
+            <div style="display:flex;padding-left:40px;gap:30px;padding-top:10px;">
               <div class=text-section>
-                <p>Server's time</p>  
+                <p></p>  
               </div>
               <div class=text-section>
-                <p>Client's time</p>
+                <p></p>
               </div>
             </div>
           <section>
