--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-r!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
   <head>
     <meta charset="utf-8">
@@ -11,7 +11,6 @@ r!DOCTYPE HTML>
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"></script>
   </head>
-  <!-- charcoal grey: #232023 -->
   <body>
     <!-- header will contain a nav with all the links to different areas of the page -->
     <header>
@@ -97,14 +96,14 @@ r!DOCTYPE HTML>
             <div style="display:flex;">
               <svg class=clock width="90" height="90" xmlns="http://www.w3.org/2000/svg">
                 <circle id=inner-clock-circle cx="45" cy="45" r="2"
-                stroke="black" stroke-width="2" fill-opacity=0></circle>
+                stroke="black" stroke-width="2" fill="white"></circle>
               </svg>
               <svg class=clock width="90" height="90" xmlns="http://www.w3.org/2000/svg">
                 <circle id=inner-clock-circle cx="45" cy="45" r="2" 
-                stroke="black" stroke-width="2" fill-opacity=0></circle>
+                stroke="black" stroke-width="2" fill="white"></circle>
               </svg>
             </div>
-            <div style="display:flex;padding-left:40px;gap:30px;padding-top:10px;">
+            <div style="display:flex;padding-left:65px;gap:70px;padding-top:10px;">
               <div class=text-section>
                 <p></p>  
               </div>
